--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "uilib-start": "NODE_ENV=development webpack-dev-server ./resources",
-    "build": "NODE_ENV=production webpack --config ./resources/webpack.config.js",
-    "prebuild": "rm -rf ./docs/"
+    "uilib-start": "NODE_ENV=development webpack-dev-server",
+    "build": "NODE_ENV=production webpack --config ./webpack.config.js",
+    "prebuild": "rm -rf ./dist/"
   },
   "repository": "git@github.com:utkarshdubey/ketu.git",
   "author": "Utkarsh Dubey <utkarsh.dubey3jan@gmail.com>",
@@ -36,7 +36,6 @@
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.2",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss-cli": "^7.1.2",
     "postcss-loader": "^4.0.1",
     "style-ext-html-webpack-plugin": "^4.1.2",
     "terser": "^5.3.1",
