Added TailwindCSS support.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "uilib-start": "NODE_ENV=development webpack-dev-server",
-    "build": "NODE_ENV=production webpack --config ./webpack.config.js",
-    "prebuild": "rm -rf ./dist/"
+    "uilib-start": "yarn watch:css && NODE_ENV=development webpack-dev-server",
+    "build": "NODE_ENV=production && rm -rf dist && yarn build:css && webpack --config ./webpack.config.js",
+    "prebuild": "rm -rf ./dist/",
+    "build:css": "postcss frontend/src/assets/tailwind.css -o frontend/src/assets/main.css",
+    "watch:css": "postcss frontend/src/assets/tailwind.css -o frontend/src/assets/main.css"
   },
   "repository": "git@github.com:utkarshdubey/ketu.git",
   "author": "Utkarsh Dubey <utkarsh.dubey3jan@gmail.com>",
@@ -25,7 +27,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-modules": "^0.1.4",
     "@babel/runtime-corejs3": "^7.11.2",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "9.8.6",
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.5",
     "css-loader": "^4.3.0",
@@ -36,8 +38,10 @@
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.2",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-cli": "7.1.2",
     "postcss-loader": "^4.0.1",
     "style-ext-html-webpack-plugin": "^4.1.2",
+    "tailwindcss": "^1.8.10",
     "terser": "^5.3.1",
     "terser-webpack-plugin": "^4.2.0",
     "url-loader": "^4.1.0",
