Added hide feature.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "electron .",
     "electron-dev": "set ELECTRON_START_URL=http://localhost:4200&&nodemon --watch application/ --exec electron .",
     "electron-build": "yarn build",
+    "rebuild": "electron-rebuild -f -w @randy.tarampi/lwip",
     "frontend-start": "yarn watch:css && set NODE_ENV=development&&webpack-dev-server",
     "frontend-build": "yarn frontend-prebuild && yarn build:css && yarn build:bundle",
     "frontend-prebuild": "rm -rf ./dist/",
@@ -39,6 +40,7 @@
     "cssnano": "^4.1.10",
     "electron": "^10.1.2",
     "electron-builder": "^22.8.1",
+    "electron-rebuild": "^2.2.0",
     "file-loader": "^6.1.0",
     "html-inline-css-webpack-plugin": "^1.8.1",
     "html-webpack-plugin": "^4.4.1",
