--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-cli": "7.1.2",
     "postcss-loader": "^4.0.1",
+    "prettier": "^2.1.2",
     "style-ext-html-webpack-plugin": "^4.1.2",
     "tailwindcss": "^1.8.10",
     "terser": "^5.3.1",
